force-app/main/default/objects/File_Note__c/File_Note__c.object-meta.xml
<CustomObject>
    <label>Call Detail</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Call Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>