force-app/main/default/objects/File_Note__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <formula>If(CONTAINS(TEXT(Approval_Status__c), &apos;CRM Approved&apos;), 
CRM__r.FirstName + &quot; &quot; + CRM__r.LastName + &quot; - CRM&quot;, 
If(CONTAINS(TEXT(Approval_Status__c),&apos;Audit Approved&apos;), 
Audit__r.FirstName + &quot; &quot; + Audit__r.LastName + &quot; - Audit&quot;, 
If(CONTAINS(TEXT(Approval_Status__c),&apos;Finance Approved&apos;), 
Finance__r.FirstName + &quot; &quot; + Finance__r.LastName + &quot; - Finance&quot;, 
If(CONTAINS(TEXT(Approval_Status__c),&apos;CFO Approved&apos;), 
CFO__r.FirstName + &quot; &quot; + CFO__r.LastName + &quot; - CFO&quot;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved By</label>
    <type>Text</type>
</CustomField>