force-app/main/default/objects/File_Note__c/fields/Call_Remark__c.field-meta.xml
<CustomField>
    <fullName>Call_Remark__c</fullName>
    <label>Call Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>