force-app/main/default/objects/File_Note__c/fields/CFO__c.field-meta.xml
<CustomField>
    <fullName>CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>