force-app/main/default/objects/File_Note__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <formula>If(TEXT(Approval_Status__c) = &apos;CRM Rejected&apos;, 
         CRM__r.FirstName + &quot; &quot; + CRM__r.LastName + &quot; - CRM&quot;,
If(TEXT(Approval_Status__c) = &apos;Audit Rejected&apos;, 
         Audit__r.FirstName + &quot; &quot; + Audit__r.LastName + &quot; - Audit&quot;,
If(TEXT(Approval_Status__c) = &apos;Finance Rejected&apos;, 
         Finance__r.FirstName + &quot; &quot; + Finance__r.LastName + &quot; - Finance&quot;,
If(TEXT(Approval_Status__c) = &apos;CFO Rejected&apos;, 
         CFO__r.FirstName + &quot; &quot; + CFO__r.LastName + &quot; - CFO&quot;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected By</label>
    <type>Text</type>
</CustomField>