force-app/main/default/objects/File_Note__c/validationRules/RecordCannotBeEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordCannotBeEdit</fullName>
    <active>false</active>
    <description>Record cannot be edited, after it is approved</description>
    <errorConditionFormula>Is_Approved__c</errorConditionFormula>
    <errorMessage>You cannot edit record once it is approved</errorMessage>
</ValidationRule>